--- a/sliding menu/test.html
+++ b/sliding menu/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Sliding Menu</title>
+        <title>Sliding Menu!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="/styles.css" />
         <script type="text/javascript" src="toggle.js"></script>
@@ -19,7 +19,7 @@
                 <li><a href="#">YouTube</a></li>
             </ul>
             </nav>
-            <div id="menu">
+            <div id="hamburger">
             <span class="inner_line" id="line1"></span>
             <span class="inner_line" id="line2"></span>
             <span class="inner_line" id="line3"></span>
